welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: expected class or object definition
isFacingTrail()
^SlugTracking:18: error: Unmatched closing brace '}' ignored here
}
^