welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail(){
    while (!estSurBiscuit){
      avance()
      if (getCouleurSol()!=Color.green){
        recule()
        droite()
      }
    }
  }
}    

isFacingTrail()

